# pbn-cpp

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  guide.md  ideas.md  main.cpp
.github/workflows/: linux.yml  maclinux.yml  tests.yml  windows.yml
build2/: CMakeCache.txt  Makefile  cmake_install.cmake  pbn  pbn_test
include/: rmn  trim.h
include/dds/: dds.h  doubledummy.h  hands.cpp
include/debug/: debug_utils.h  debug_utils.hpp
include/manipulators/: PbnBoardAnalyzer.cpp  PbnBoardAnalyzer.h  PbnBoardAnalyzer.hpp  PbnBoardManipulator.h  PbnBoardManipulator.hpp  PbnInfoPrinter.cpp  PbnInfoPrinter.h  PbnInfoPrinter.hpp  PbnStripper.cpp  PbnStripper.h  PbnStripper.hpp
include/pbn/: BoardContext.cpp  BoardContext.h  BoardContext.hpp  BoardNumber.h  BoardNumber.hpp  DealContext.cpp  DealContext.h  PbnFile.cpp  PbnFile.h  PbnFile.hpp  PbnParser.cpp  PbnParser.h  PbnParser.hpp  PbnSerializer.h  PbnSerializer.hpp  PbnVersion.h  PbnVersion.hpp
include/program/: PbnApplication.cpp  PbnApplication.h  PbnApplication.hpp  PbnSerializer.cpp  PbnSerializer.h  application.cpp  application.h
include/tokens/: Commentary.cpp  Commentary.h  Commentary.hpp  CustomEscapedLine.h  CustomEscapedLine.hpp  EmptyLine.cpp  EmptyLine.h  EmptyLine.hpp  EscapedLine.cpp  EscapedLine.h  EscapedLine.hpp  ExportEscapedLine.h  ExportEscapedLine.hpp  SemanticPbnToken.cpp  SemanticPbnToken.h  SemanticPbnToken.hpp  SupplementSectionTag.cpp  SupplementSectionTag.h  TableTag.cpp  TableTag.h  TableTag.hpp  Tag.cpp  Tag.h  Tag.hpp  TagFactory.cpp  TagFactory.h  TagFactory.hpp  Tags.h  Tags.hpp  TextLine.cpp  TextLine.h  TextLine.hpp  VersionEscapedLine.h  VersionEscapedLine.hpp
include/tokens/tags/: BoardTag.h  BoardTag.hpp
include/utils/: arrays.h  arrays.hpp  observer.h  observer.hpp  strings.cpp  strings.h  strings.hpp
pbn_files/: bigdeal.pbn  bigdeal_with_deepfinese_analyses.pbn  bridgecomposer.pbn  empty.pbn
src/manipulators/: PbnInfoPrinter.cpp  PbnStripper.cpp
src/pbn/: BoardContext.cpp  PbnFile.cpp  PbnParser.cpp  PbnSerializer.cpp
src/program/: PbnApplication.cpp
src/tokens/: Commentary.cpp  CustomEscapedLine.cpp  EmptyLine.cpp  EscapedLine.cpp  SemanticPbnToken.cpp  TableTag.cpp  Tag.cpp  TagFactory.cpp  TextLine.cpp
src/tokens/tags/: BoardTag.cpp
src/utils/: strings.cpp
test/: basic.cpp  file_token_manipulation.h  file_token_manipulation.hpp  parser.h  parser.hpp
